# ai-market-intelligence

./: README.md  main.py  pyproject.toml
src/ingestion/: __init__.py  android_loader.py  combine_datasets.py  fetch_ios.py
src/insights/: __init__.py  insights.py  phase5_insights.py
src/reports/: __init__.py  report_generation.py
